Fix of some checkstyle issues.